objects/ASI_CRM_Pre_Contract_Sub_Brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Bottle_Incentive__c</fullName>
        <label>Bottle Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimate_Volume_9L_Month__c</fullName>
        <formula>if (NOT(ISNULL( ASI_CRM_Sub_Brand__r.ASI_CRM_CN_Standard_Bottle_Size__c )), ( 1/(9000/ASI_CRM_Sub_Brand__r.ASI_CRM_CN_Standard_Bottle_Size__c ))* ASI_CRM_Estimated_Btl_Month__c,ASI_CRM_Estimated_Btl_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Volume 9L /Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimate_Volume_CR12_Month__c</fullName>
        <formula>IF(NOT(ISNULL( ASI_CRM_Sub_Brand__r.ASI_CRM_CN_COnvfactor_Ltocr12_C__c )), ASI_CRM_Sub_Brand__r.ASI_CRM_CN_COnvfactor_Ltocr12_C__c* ASI_CRM_Estimated_Btl_Month__c , ASI_CRM_Estimated_Btl_Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Volume CR12 /Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Estimated_Btl_Month__c</fullName>
        <label>Estimated Btl/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <label>Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_Contract_Eval__c</fullName>
        <label>Pre-Contract Evaluation</label>
        <referenceTo>ASI_CRM_PreContractEval__c</referenceTo>
        <relationshipLabel>Pre-Contract Sub-Brand</relationshipLabel>
        <relationshipName>Pre_Contract_Sub_Brand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Brand__r.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Pre-Contract Sub-Brand</relationshipLabel>
        <relationshipName>Pre_Contract_Sub_Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Temp_Total_Amount__c</fullName>
        <label>Total Amount (Temp)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <formula>ASI_CRM_Estimated_Btl_Month__c * ASI_CRM_Bottle_Incentive__c * ASI_CRM_Pre_Contract_Eval__r.ASI_CRM_No_of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pre-Contract Sub-Brand</label>
    <nameField>
        <displayFormat>PCSB-{00000000}</displayFormat>
        <label>Pre-Contract Sub-Brand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Contract Sub-Brand</pluralLabel>
    <recordTypes>
        <fullName>CN_Pre_Contract_Sub_Brand</fullName>
        <active>true</active>
        <label>CN Pre-Contract Sub Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>